@@ -2,7 +2,7 @@
 
 /* Test cursor do not give error for statement that do not return rows  */
 
-static char software_version[] = "$Id: cursor2.c,v 1.1 2006-03-21 14:25:48 freddy77 Exp $";
+static char software_version[] = "$Id: cursor2.c,v 1.2 2007-04-19 09:11:56 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 #define CHK(func,params) \
@@ -12,14 +12,24 @@ static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 int
 main(int argc, char *argv[])
 {
-        unsigned char sqlstate[6];
-        unsigned char msg[256];
+	unsigned char sqlstate[6];
+	unsigned char msg[256];
+	SQLRETURN retcode;
 
 	Connect();
 
 	Command(Statement, "CREATE TABLE #cursor2_test (i INT)");
 
-	CHK(SQLSetConnectAttr, (Connection, SQL_ATTR_CURSOR_TYPE,  (SQLPOINTER) SQL_CURSOR_DYNAMIC, SQL_IS_INTEGER));
+	retcode = SQLSetConnectAttr(Connection, SQL_ATTR_CURSOR_TYPE,  (SQLPOINTER) SQL_CURSOR_DYNAMIC, SQL_IS_INTEGER);
+	if (retcode != SQL_SUCCESS) {
+		CHK(SQLGetDiagRec, (SQL_HANDLE_DBC, Connection, 1, sqlstate, NULL, (SQLCHAR *) msg, sizeof(msg), NULL));
+		sqlstate[5] = 0;
+		if (strcmp((const char*) sqlstate, "S1092") == 0) {
+			printf("Your connection seems to not support cursors, probably you are using wrong protocol version or Sybase\n");
+			exit(0);
+		}
+		ODBC_REPORT_ERROR("SQLSetConnectAttr");
+	}
 
 	ResetStatement();
 
