@@ -1,3 +1,8 @@
+Thu Apr 19 11:11:55 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/cursor1.c src/odbc/unittests/cursor2.c:
+	* src/odbc/unittests/scroll.c:
+	- give only warning for Sybase
+
 Thu Apr 19 10:45:15 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tdsodbc.h src/odbc/odbc.c:
 	- say we not still support cursors for sybase
